--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>子墨软件</title>
     <link rel="icon" href="image/logo.png" type="image/zimo.ico">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/hm.css">
-    <link rel="stylesheet" href="css/font_4030460_xd1n66hk97.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/hm.css">
+    <link rel="stylesheet" href="CSS/font_4030460_xd1n66hk97.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRT42NRY3V"></script>
