--- a/ruanjian/rj.html
+++ b/ruanjian/rj.html
@@ -110,7 +110,7 @@
                     <div class="link">
                         <img src="image/jz.gif" data-src="image/icon_large.svg" alt="Icon"
                              style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
-                        <a href="https://pan.xunlei.com/s/VO0gWayyj8KphooNsenMUkAKA1?pwd=9nrm#" target="_blank">mac版本</a>
+                        <a href="https://pan.quark.cn/s/a148b02be90e" target="_blank">mac版本</a>
                     </div>
                 </div>
                 <div class="dlink">
@@ -299,7 +299,7 @@
                     <div class="link">
                         <img src="image/jz.gif" data-src="image/icon_large.svg" alt="Icon"
                              style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
-                        <a href="https://pan.xunlei.com/s/VO0gd2fIVKSieTzT5KjdHfIeA1?pwd=idun#" target="_blank">mac版本</a>
+                        <a href="https://pan.quark.cn/s/e5a165119368" target="_blank">mac版本</a>
                     </div>
                 </div>
                 <div class="dlink">
@@ -516,8 +516,156 @@
                     </div>
                 </div>
             </div>
+           <div class="sw-title" onclick="toggleMenu(&#39;menu5&#39;, &#39;.sw-title5 .icon-icon_zuo&#39;)">
+                    <span class="cursor sw-title5">
+                        <i class="iconfont icon-icon_zuo down-arrow"></i>
+                        <span style="margin-left: 10px;">Animate</span>
+                    </span>
+            </div>
+            <div class="sw-item" id="menu5" style="display: none;">
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/icon_large.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.quark.cn/s/fcba2b560a0f" target="_blank">mac版本</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i03jdNOVm-dEpUKHxGq9yA1?pwd=wimq#" target="_blank">Animate 2024</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i092KNOVm-dEpUKHxGs2PA1?pwd=b33j#" target="_blank">Animate 2023</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0G5NmqTNIQZvVScWyOGfA1?pwd=mbmq#" target="_blank">Animate 2022</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0LMzQD7-mgjT0U6g3n7eA1?pwd=bv3p#" target="_blank">Animate 2021</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0RNnyRgAqdBj-XEJgiIkA1?pwd=wguh#" target="_blank">Animate 2020</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0XXrFq0ZG8QbQmW05PzuA1?pwd=7ueb#" target="_blank">Animate 2019</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0dRyDmP6ZD_ky2CNB6s7A1?pwd=ihwn#" target="_blank">Animate 2018</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20An.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i0jo29SjIPorEUD8iK3cRA1?pwd=y3rx#" target="_blank">Animate 2017</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sw-title" onclick="toggleMenu(&#39;menu6&#39;, &#39;.sw-title6 .icon-icon_zuo&#39;)">
+                    <span class="cursor sw-title6">
+                        <i class="iconfont icon-icon_zuo down-arrow"></i>
+                        <span style="margin-left: 10px;">Audition</span>
+                    </span>
+            </div>
+            <div class="sw-item" id="menu6" style="display: none;">
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/icon_large.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.quark.cn/s/c60f287b5459" target="_blank">mac版本</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4MCKKYkhXDS2ufLtVb79A1?pwd=ptpq#" target="_blank">Audition 2024</a>
+                    </div>
+                </div>
+                <div class="dlink">
 
-         
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4Y6E2Gfl8-TCzV-iB91qA1?pwd=rkv2#" target="_blank">Audition 2023</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4dWYz18L4SnSkjw1alXiA1?pwd=za7u#" target="_blank">Audition 2022</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4kPvFq0ZG8QbQmW06zKbA1?pwd=3pen#" target="_blank">Audition 2021</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4skpdBGg3rX_82Uz1Ab7A1?pwd=hzfi#" target="_blank">Audition 2020</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i4yK5z18L4SnSkjw1asQyA1?pwd=bi3k#" target="_blank">Audition 2019</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i53TaQvPVMt36wYU6C8FpA1?pwd=etqv#" target="_blank">Audition 2018</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/Adobe%20Au.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.xunlei.com/s/VO0i58eNQvPVMt36wYU6C9wyA1?pwd=eexw#" target="_blank">Audition 2017</a>
+                    </div>
+                </div>
+                <div class="dlink">
+                    <div class="link">
+                        <img src="image/jz.gif" data-src="image/JC.svg" alt="Icon"
+                             style="width: 25px; height: 25px; margin-left: 15px; border-radius: 10px;">
+                        <a href="https://pan.quark.cn/s/a0963d9fefe9" target="_blank">Au 视频教程</a>
+                    </div>
+                </div>
+            </div>			
             
         </div>
 	</body>
