--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div id="ruanjian" class="ruanjian">
         <div class="sidebar">
             <div id="rj" class="mulu" onclick="replaceContent('Adobe')">Adobe</div>
-<!--           <div id="kf" class="mulu" onclick="replaceContent('JetBrains')">JetBrains</div>
+			<div id="kf" class="mulu" onclick="replaceContent('JetBrains')">JetBrains</div>
+<!--           
             <div id="rjkf" class="mulu" onclick="replaceContent('软件开发')">软件开发</div>
             <div id="jm" class="mulu" onclick="replaceContent('Autodesk')">Autodesk</div>
             <div id="zdh" class="mulu" onclick="replaceContent('电路设计')">电路设计</div>
