--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="sidebar">
             <div id="rj" class="mulu" onclick="replaceContent('Adobe')">Adobe</div>
 			<div id="kf" class="mulu" onclick="replaceContent('JetBrains')">JetBrains</div>
-			<div id="ts" class="mulu" onclick="replaceContent('特色软件')">特色软件</div>
+			<div id="shengmi" class="mulu" onclick="replaceContent('shengmi')">特色软件</div>
 <!--           
             <div id="rjkf" class="mulu" onclick="replaceContent('软件开发')">软件开发</div>
             <div id="jm" class="mulu" onclick="replaceContent('Autodesk')">Autodesk</div>
